<resources>
    <string name="app_name">FocusLock</string>
    <string name="sun_description">Image indicating the wakeup time</string>
    <string name="moon_description">Image indicating the sleep time</string>
    <string name="item1_title">Home</string>
    <string name="item2_title">Motivation</string>
    <string name="item3_title">Applications</string>
    <string name="wake_up_time_key">wakeUpTime</string>
    <string name="sleep_time_key">sleepTime</string>
    <string name="app_icon_description">Image for corresponding app icon</string>
    <string name="blocked_icon_description">Image for corresponding blocked status</string>
    <string name="block_app_set_key">blockedAppSet</string>
    <string name="first_installation_key">first_installation</string>
    <string name="request_code_for_morning">110</string>
    <string name="request_code_for_night">111</string>
    <string name="block_message">Focus human! There are more important targets to hit!!</string>
    <string name="content_of_the_day">Content of the day</string>
    <string name="youTube_dev_key">AIzaSyBksehp4bPQyoggVdhZD_pJgJF5pa30Xis</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="native_ad_unit_id">ca-app-pub-5373874613722696/9551872183</string>
    <string name="app_id_admob">ca-app-pub5373874613722696~1123729585</string>
    <string name="day_installed_key">day_installed</string>
    <string name="life_days_left_key">days_left</string>
    <string name="days_left">days left</string>
    <string name="disclaimer">(based on average life expectancy of %s)</string>
    <string name="country_key">country</string>
    <string name="target_hit_icon">Target hit icon</string>
    <string name="thumbnail_for_the_video">thumbnail for the video</string>
    <string name="play_button_icon">play button icon</string>
    <string name="title_1">Set Wake Up &amp; Sleep time</string>
    <string name="description_1">Set the wake up and sleep time so that the app can turn off distractions appropriately \n(for 3 hours after you wake up &amp; 1 hour before you sleep)</string>
    <string name="title_2">Block the distractions</string>
    <string name="description_2">Block the applications that distract you in application section</string>
    <string name="title_3">Daily motivational content</string>
    <string name="description_3">Watch daily motivational content to boost you up for the day in the app itself so you don\'t get distracted and are ready to execute.</string>
    <string name="dob_title">Enter you Date of Birth</string>
    <string name="date_format_hint">dd/mm/yyyy</string>
    <string name="day_today_key">day_today</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
