<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/wake_up_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/sun_description"
        android:src="@drawable/alarm_clock"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wake_up_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/wake_up_icon"
        app:layout_constraintRight_toRightOf="@+id/sleep_time"
        app:layout_constraintTop_toTopOf="@+id/wake_up_icon"
        app:layout_constraintVertical_bias="1.0"
        tools:text="10:00" />

    <ImageView
        android:id="@+id/sleep_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="35dp"
        android:contentDescription="@string/moon_description"
        android:src="@drawable/dream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/wake_up_icon" />

    <TextView
        android:id="@+id/sleep_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="8dp"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/sleep_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sleep_icon"
        app:layout_constraintVertical_bias="1.0"
        tools:text="10:00" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/sleep_icon"
        app:layout_constraintLeft_toLeftOf="@+id/wake_up_icon"
        app:layout_constraintRight_toRightOf="@+id/sleep_time"
        app:layout_constraintTop_toBottomOf="@+id/wake_up_icon">

        <TextView
            android:id="@+id/days_left_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="60sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="17285" />

        <TextView
            android:id="@+id/days_left_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/days_left"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>


    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout2"
        app:layout_constraintRight_toRightOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="SmallSp" />

</android.support.constraint.ConstraintLayout>
